--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_image_slideshow: ^0.1.4
   flutter_screenutil: ^5.5.4
   get: ^4.6.5
+  pin_code_fields: any
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -23,9 +24,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/baked-dorado-fish-vegetables-black-stone-plate-top-view-free-space-your-text-baked-dorado-fish-vegetables-182821526.jpg
   # fonts:
   #   - family: Schyler
   #     fonts:
